Closed
Bug 1829282
Opened 2 years ago
Closed 2 years ago
widget/gtk/GfxInfo.cpp:610:25: error: ‘IsWaylandEnabled’ was not declared in this scope
Categories
(Core :: Widget: Gtk, defect, P3)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
114 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox112 | --- | unaffected |
| firefox113 | --- | unaffected |
| firefox114 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: stransky)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to reproduce:
Build on Solaris fails with:
23:02.56 /builds/psumbera/mozilla-central-build/widget/gtk/GfxInfo.cpp: In static member function ‘static bool mozilla::widget::GfxInfo::FireGLXTestProcess()’:
23:02.56 /builds/psumbera/mozilla-central-build/widget/gtk/GfxInfo.cpp:610:25: error: ‘IsWaylandEnabled’ was not declared in this scope
23:02.56 610 | IsWaylandEnabled() ? "-w" : nullptr, nullptr};
23:02.56 | ^~~~~~~~~~~~~~~~
| Reporter | ||
Updated•2 years ago
|
Keywords: regression
Regressed by: 1828192
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Comment 2•2 years ago
|
||
:stransky, since you are the author of the regressor, bug 1828192, could you take a look?
For more information, please visit auto_nag documentation.
Flags: needinfo?(stransky)
| Assignee | ||
Updated•2 years ago
|
Assignee: nobody → stransky
Priority: -- → P3
| Assignee | ||
Comment 3•2 years ago
|
||
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(stransky)
Comment 5•2 years ago
|
||
The following field has been copied from a duplicate bug:
| Field | Value | Source |
|---|---|---|
| Status | NEW | bug 1829102 |
For more information, please visit auto_nag documentation.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•2 years ago
|
||
Set release status flags based on info from the regressing bug 1828192
status-firefox112:
--- → unaffected
status-firefox113:
--- → unaffected
status-firefox114:
--- → affected
status-firefox-esr102:
--- → unaffected
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/555f98a971f8
[Linux] Export IsWaylandEnabled() on X11 builds r=emilio
Comment 8•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•