Bug 1829282 [Linux] Export IsWaylandEnabled() on X11 builds r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D176117